# UNSW-MTRN4231-Group-Assignment-Brick-Layers

./: README.md
src/arduino/: package.xml  setup.cfg  setup.py
src/arduino/Magnetometer/: Magnetometer.ino
src/arduino/launch/: serial_listener_launch.py
src/arduino/serial_listener/: serial_listener_node.py
src/aruco_detect/: package.xml  setup.py
src/aruco_detect/aruco_detect/: aruco_detect.py  board_publish.py
src/aruco_detect/launch/: aruco_detect_launch.py
src/brain/: CMakeLists.txt  package.xml
src/brain/launch/: brain_launch.py  system_launch.py
src/brain/src/: brain.cpp
src/camera_calibrate/: package.xml  setup.cfg  setup.py
src/camera_calibrate/camera_calibrate/: camera_calibrate.py
src/end_effector/end_effector_description/: CMakeLists.txt  package.xml
src/end_effector/end_effector_description/launch/: display.launch.py
src/end_effector/end_effector_description/meshes/: EndEffectorAssyV2.stl  cube_25magnet.STL
src/end_effector/end_effector_description/rviz/: end_effector.rviz
src/end_effector/end_effector_description/urdf/: end_effector.urdf.xacro  end_effector.xacro
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: StartEndPoints.msg
src/interfaces/srv/: ArduinoCall.srv  ArmPose.srv  GetPartSize.srv
src/motion/: CMakeLists.txt  package.xml
src/motion/launch/: motion_launch.py
src/motion/src/: move_to_location.cpp  path_planning.cpp
src/object_detect/: package.xml  setup.py
src/object_detect/launch/: object_detect_launch.py
src/object_detect/object_detect/: camera_frame_pub.py  dummy_free.py  dummy_workspace.py  object_detect.py
src/stl_parser/: package.xml  setup.cfg  setup.py
src/stl_parser/launch/: stl_parser_launch.py
src/stl_parser/stl_files/: mvp.stl  test1.stl
src/stl_parser/stl_parser/: stl_to_blocks.py
