<?xml version="1.0"?>
<package format="3">
  <name>interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="z5376231@ad.unsw.edu.au">mtrn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies for runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>  <!-- Add this if you are using String messages -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
